Converted some images from GIF to PNG.

--- a/sfsite/header.html
+++ b/sfsite/header.html
@@ -32,8 +32,8 @@ A.sidebar:hover {color: blue; text-decoration: underline}
 <font face="arial, helvetica" size="1">
 <br><nobr>&nbsp;&nbsp;<b>-</b>&nbsp;<a href="http://bochs.sourceforge.net" target="_top" class="sidebar">Home Page</a></nobr>
 <br><nobr>&nbsp;&nbsp;<b>-</b>&nbsp;<a href="<!--#include virtual="includes/release.txt" -->" target="_top" class="sidebar">Download Latest</a></nobr>
-</font></center></td><td width="240" height="76"><a href="http://bochs.sourceforge.net" target="_top"><img src="http://bochs.sourceforge.net/images/smban.gif" width="240" height="76" border="0" alt="bochs: think inside the bochs."></a></td><td>&nbsp;</td></tr>
-<tr><td bgcolor="#4079d6" height="1"><img src="http://bochs.sourceforge.net/images/smblue.gif" width="140" height="1"></td><td colspan="2" bgcolor="#4079d6" height="1"><img src="http://bochs.sourceforge.net/images/smblue.gif" width="100%" height="1"></td></tr>
+</font></center></td><td width="240" height="76"><a href="http://bochs.sourceforge.net" target="_top"><img src="http://bochs.sourceforge.net/images/smban.png" width="240" height="76" border="0" alt="bochs: think inside the bochs."></a></td><td>&nbsp;</td></tr>
+<tr><td bgcolor="#4079d6" height="1"><img src="http://bochs.sourceforge.net/images/smblue.png" width="140" height="1"></td><td colspan="2" bgcolor="#4079d6" height="1"><img src="http://bochs.sourceforge.net/images/smblue.png" width="100%" height="1"></td></tr>
 </table>
 </BODY>
 </HTML>
