--- a/sfsite/index.html
+++ b/sfsite/index.html
@@ -4,7 +4,7 @@
 
 <!--#include virtual="includes/header.txt" -->
 
- <img src="images/logo.gif" alt="A Window, Tux, and the BSD Daemon" width="160" height="175" align="right">
+ <img src="images/logo.png" alt="A Window, Tux, and the BSD Daemon" width="160" height="175" align="right">
  <BR><font face="arial, helvetica" color="#1e029a" size="4"><b>Welcome to the Bochs IA-32 Emulator Project</b></font><BR>
 
  &nbsp;&nbsp;&nbsp;&nbsp;Bochs is a highly portable open source IA-32 (x86) PC emulator
