--- a/sfsite/mailinglists.html
+++ b/sfsite/mailinglists.html
@@ -5,7 +5,7 @@
 <!--#include virtual="includes/header.txt" -->
 
  <!--content starts here-->
- <img src="images/logo.gif" alt="A Window, Tux, and the BSD Daemon" width="160" height="175" align="right">
+ <img src="images/logo.png" alt="A Window, Tux, and the BSD Daemon" width="160" height="175" align="right">
 
  <BR><font face="arial, helvetica" color="#1e029a" size="4"><b>Bochs Mailing Lists</b></font><BR><BR>
  &nbsp;&nbsp;&nbsp;&nbsp;There are now two Bochs mailing lists, bochs-announce and bochs-developers. Bochs-announce is a
