--- a/sfsite/related.html
+++ b/sfsite/related.html
@@ -4,7 +4,7 @@
 
 <!--#include virtual="includes/header.txt" -->
 
- <img src="images/logo.gif" alt="A Window, Tux, and the BSD Daemon" width="160" height="175" align="right">
+ <img src="images/logo.png" alt="A Window, Tux, and the BSD Daemon" width="160" height="175" align="right">
  <BR><font face="arial, helvetica" color="#1e029a" size="4"><b>Related Projects</b></font><BR>
 
 <ul>
