--- a/trunk/sfsite/getcurrent.html
+++ b/trunk/sfsite/getcurrent.html
@@ -5,7 +5,7 @@
 <!--#include virtual="includes/header.txt" -->
 
  <!--content starts here-->
- <img src="images/logo.gif" alt="A Window, Tux, and the BSD Daemon" width="160" height="175" align="right">
+ <img src="images/logo.png" alt="A Window, Tux, and the BSD Daemon" width="160" height="175" align="right">
 
  <BR><font face="arial, helvetica" color="#1e029a" size="4"><b>Latest release:</b> Bochs 2.6.11</font><BR><BR>
 
