--- a/trunk/sfsite/getinvolved.html
+++ b/trunk/sfsite/getinvolved.html
@@ -4,7 +4,7 @@
 
 <!--#include virtual="includes/header.txt" -->
 
- <img src="images/logo.gif" alt="A Window, Tux, and the BSD Daemon" width="160" height="175" align="right">
+ <img src="images/logo.png" alt="A Window, Tux, and the BSD Daemon" width="160" height="175" align="right">
  <BR><font face="arial, helvetica" color="#1e029a" size="4"><b>Get Involved with Bochs</b></font><BR>
  &nbsp;&nbsp;&nbsp;&nbsp;If you enjoy using Bochs, please consider joining our development team to
  assist in improving and extending Bochs. Open source projects depend on people like you to keep them
