--- a/trunk/sfsite/screenshots.html
+++ b/trunk/sfsite/screenshots.html
@@ -4,7 +4,7 @@
 
 <!--#include virtual="includes/header.txt" -->
 
- <img src="images/logo.gif" alt="A Window, Tux, and the BSD Daemon" width="160" height="175" align="right">
+ <img src="images/logo.png" alt="A Window, Tux, and the BSD Daemon" width="160" height="175" align="right">
  <BR><font face="arial, helvetica" color="#1e029a" size="4"><b>Bochs Screenshots</b></font><BR>
  &nbsp;&nbsp;&nbsp;&nbsp;Anxious to see how Bochs looks? These screenshots let you see Bochs running a variety of typical and exotic
  operating systems.
