--- a/trunk/sfsite/techdata.html
+++ b/trunk/sfsite/techdata.html
@@ -4,7 +4,7 @@
 
 <!--#include virtual="includes/header.txt" -->
 
- <img src="images/logo.gif" alt="A Window, Tux, and the BSD Daemon" width="160" height="175" align="right">
+ <img src="images/logo.png" alt="A Window, Tux, and the BSD Daemon" width="160" height="175" align="right">
  <BR><font face="arial, helvetica" color="#1e029a" size="4"><b>Technical Documents Related to Bochs</b></font><BR>
 
  &nbsp;&nbsp;&nbsp;&nbsp;Because Bochs emulates much of the standard PC hardware, developers must have access to good
