--- a/trunk/sfsite/getcurrent.html
+++ b/trunk/sfsite/getcurrent.html
@@ -57,7 +57,7 @@ The binary packages for Linux and Windows are built with these features :
  </ul>
 </ul>
 
-<a href="http://svn.code.sf.net/p/bochs/code/tags/REL_2_6_11_FINAL/bochs/CHANGES">
+<a href="https://svn.code.sf.net/p/bochs/code/tags/REL_2_6_11_FINAL/bochs/CHANGES">
 Details on what has changed since version 2.6.10
 </a>
 
@@ -81,7 +81,7 @@ Bochs 2.6.10 is an intermediate (bugfix+) release. Here is the summary of change
 
 <BR>
 
-<a href="http://svn.code.sf.net/p/bochs/code/tags/REL_2_6_10_FINAL/bochs/CHANGES">
+<a href="https://svn.code.sf.net/p/bochs/code/tags/REL_2_6_10_FINAL/bochs/CHANGES">
 Details on what has changed since version 2.6.9
 </a>
 
