--- a/trunk/sfsite/header.html
+++ b/trunk/sfsite/header.html
@@ -30,10 +30,10 @@ A.sidebar:hover {color: blue; text-decoration: underline}
 <tr><td width="140" height="12" bgcolor="#aacbff"><font size="1">&nbsp;</font></td><td bgcolor="#6d95d7" width="400"><font size="1">&nbsp;</font></td><td width="100%"><table border="0" cellspacing="0" cellpadding="0" width="100%" height="12"><tr><td bgcolor="#4079d6" width="50%"><font size="1">&nbsp;</font></td><td bgcolor="#1e029a" width="50%"><font size="1">&nbsp;</font></td></tr></table></td></tr>
 <tr><td width="140" bgcolor="#6d95d7">
 <font face="arial, helvetica" size="1">
-<br><nobr>&nbsp;&nbsp;<b>-</b>&nbsp;<a href="http://bochs.sourceforge.net" target="_top" class="sidebar">Home Page</a></nobr>
+<br><nobr>&nbsp;&nbsp;<b>-</b>&nbsp;<a href="https://bochs.sourceforge.net" target="_top" class="sidebar">Home Page</a></nobr>
 <br><nobr>&nbsp;&nbsp;<b>-</b>&nbsp;<a href="<!--#include virtual="includes/release.txt" -->" target="_top" class="sidebar">Download Latest</a></nobr>
-</font></center></td><td width="240" height="76"><a href="http://bochs.sourceforge.net" target="_top"><img src="http://bochs.sourceforge.net/images/smban.png" width="240" height="76" border="0" alt="bochs: think inside the bochs."></a></td><td>&nbsp;</td></tr>
-<tr><td bgcolor="#4079d6" height="1"><img src="http://bochs.sourceforge.net/images/smblue.png" width="140" height="1"></td><td colspan="2" bgcolor="#4079d6" height="1"><img src="http://bochs.sourceforge.net/images/smblue.png" width="100%" height="1"></td></tr>
+</font></center></td><td width="240" height="76"><a href="https://bochs.sourceforge.io" target="_top"><img src="https://bochs.sourceforge.io/images/smban.png" width="240" height="76" border="0" alt="bochs: think inside the bochs."></a></td><td>&nbsp;</td></tr>
+<tr><td bgcolor="#4079d6" height="1"><img src="https://bochs.sourceforge.io/images/smblue.png" width="140" height="1"></td><td colspan="2" bgcolor="#4079d6" height="1"><img src="https://bochs.sourceforge.io/images/smblue.png" width="100%" height="1"></td></tr>
 </table>
 </BODY>
 </HTML>
