--- a/sfsite/index.html
+++ b/sfsite/index.html
@@ -27,14 +27,20 @@
 <hr>
 <table border=0>
 <tr>
-<td> <img src="images/bochs2_6.png" alt="Bochs 2.6.9"></td>
+<td> <img src="images/bochs2_7.png" alt="Bochs 2.7"></td>
 <td>
+<font face="arial, helvetica" color="#1e029a" size="4"><b>Bochs 2.7 is coming soon !</b></font><BR>
+We are currently preparing the first pre-release of the new Bochs version. See the
+<a href="https://svn.code.sf.net/p/bochs/code//trunk/bochs/CHANGES">
+CHANGES</a> file for details on what has changed since release 2.6.11<BR>
+</td></tr></table><hr>
+
 <font face="arial, helvetica" color="#1e029a" size="4"><b>Bochs 2.6.11 released on January 5, 2020 !</b></font><BR>
 New Bochs 2.6.11 release is now available. You can download it from the
 <a href="https://sourceforge.net/projects/bochs/files/bochs/2.6.11/">SourceForge project page</a>.<BR>
-See the <a href="http://svn.code.sf.net/p/bochs/code/tags/REL_2_6_11_FINAL/bochs/CHANGES">
+See the <a href="https://svn.code.sf.net/p/bochs/code/tags/REL_2_6_11_FINAL/bochs/CHANGES">
 CHANGES</a> file for details on what has changed since release 2.6.10<BR>
-</td></tr></table><hr>
+<hr>
 
 <BR><BR>
 <font face="arial, helvetica" color="#1e029a" size="4"><b>Bochs IRC Chat Transcripts</b></font><BR>
@@ -51,16 +57,16 @@ Bochs was presented at ISCA-35 in Beijing, China at
 "The 1st Workshop on Architectural and Microarchitectural Support for Binary Translation" by a paper
 <br><font face="arial, helvetica" color="#1e029a" size="2"><b>
 "Virtualization without direct execution - designing a portable VM".</b></font>
-<br>Download <a href="http://bochs.sourceforge.net/Virtualization_Without_Hardware_Final.pdf">paper</a> and <a href="http://bochs.sourceforge.net/VirtNoJit.pdf">presentation</a> slides.
+<br>Download <a href="https://bochs.sourceforge.io/Virtualization_Without_Hardware_Final.pdf">paper</a> and <a href="http://bochs.sourceforge.net/VirtNoJit.pdf">presentation</a> slides.
 
 <BR><BR><BR>
-Want to know more about Bochs architecture ? <a href="http://bochs.sourceforge.net/How the Bochs works under the hood 2nd edition.pdf">How the Bochs works under the hood (2nd edition)</a>
+Want to know more about Bochs architecture ? <a href="https://bochs.sourceforge.io/How the Bochs works under the hood 2nd edition.pdf">How the Bochs works under the hood (2nd edition)</a>
 
 <BR><BR><BR>
 <font face="arial, helvetica" color="#1e029a" size="4"><b>Help Wanted</b></font><BR>
 <i>We currently need help with the following tasks:</i>
 <ul>
-<li><a href="http://bochs.sourceforge.net/cgi-bin/topper.pl?name=Bugs+Waiting+to+be+Fixed&url=http://sourceforge.net/tracker/qmrkgroup_ideq12580ampatideq112580">
+<li><a href="https://bochs.sourceforge.io/cgi-bin/topper.pl?name=Bugs+Waiting+to+be+Fixed&url=https://sourceforge.net/p/bochs/bugs">
 Bug Reports</a>:
 Mouse, interrupt controller,
 timer, IDE controller, network card, keyboard, VGA...  Most of our bug
@@ -70,11 +76,11 @@ where to find the specs for this stuff and improve the hardware models for
 Bochs.  Working on models is a fun way to learn how things work, and unlike
 designing a real hard disk, you can test out your changes on a real operating
 system immediately!
-<li><a href="http://bochs.sourceforge.net/diskimages.html">Disk Images</a>: Our collection of disk images is getting out of date.  It would be great to have small or large images of a variety of free operating systems.
+<li><a href="https://bochs.sourceforge.io/diskimages.html">Disk Images</a>: Our collection of disk images is getting out of date.  It would be great to have small or large images of a variety of free operating systems.
 <li>Documentation: Adding installation help and other useful information into the docs.
 </ul>
-To help with one of these tasks, please contact <a href="http://sourceforge.net/sendmessage.php?touser=376477">Volker Ruppert</a>
-or <a href="http://sourceforge.net/sendmessage.php?touser=487634">Stanislav Shwartsman</a>.
+To help with one of these tasks, please contact <a href="https://sourceforge.net/sendmessage.php?touser=376477">Volker Ruppert</a>
+or <a href="https://sourceforge.net/sendmessage.php?touser=487634">Stanislav Shwartsman</a>.
 <BR><BR>
 <font face="arial, helvetica" color="#1e029a" size="4"><b>Older News</b></font><BR>
 <ul>
