--- a/trunk/sfsite/index.html
+++ b/trunk/sfsite/index.html
@@ -30,8 +30,9 @@
 <td> <img src="images/bochs2_7.png" alt="Bochs 2.7"></td>
 <td>
 <font face="arial, helvetica" color="#1e029a" size="4"><b>Bochs 2.7 is coming soon !</b></font><BR>
-We are currently preparing the first pre-release of the new Bochs version. See the
-<a href="https://svn.code.sf.net/p/bochs/code//trunk/bochs/CHANGES">
+The first pre-release of the new Bochs version is now available. You can download
+it from the <a href="https://sourceforge.net/projects/bochs/files/bochs/2.7.pre1">Bochs project page on SourceForge</a>.
+See the <a href="https://svn.code.sf.net/p/bochs/code/tags/REL_2_7_pre1_FINAL/bochs/CHANGES">
 CHANGES</a> file for details on what has changed since release 2.6.11<BR>
 </td></tr></table><hr>
 
