--- a/trunk/sfsite/index.html
+++ b/trunk/sfsite/index.html
@@ -29,19 +29,12 @@
 <tr>
 <td> <img src="images/bochs2_7.png" alt="Bochs 2.7"></td>
 <td>
-<font face="arial, helvetica" color="#1e029a" size="4"><b>Bochs 2.7 is coming soon !</b></font><BR>
-The first pre-release of the new Bochs version is now available. You can download
-it from the <a href="https://sourceforge.net/projects/bochs/files/bochs/2.7.pre1">Bochs project page on SourceForge</a>.
-See the <a href="https://svn.code.sf.net/p/bochs/code/tags/REL_2_7_pre1_FINAL/bochs/CHANGES">
+<font face="arial, helvetica" color="#1e029a" size="4"><b>Bochs 2.7 released on August 1, 2021 !</b></font><BR>
+The final release of the new Bochs version is now available. You can download
+it from the <a href="https://sourceforge.net/projects/bochs/files/bochs/2.7">Bochs project page on SourceForge</a>.
+See the <a href="https://svn.code.sf.net/p/bochs/code/tags/REL_2_7_FINAL/bochs/CHANGES">
 CHANGES</a> file for details on what has changed since release 2.6.11<BR>
 </td></tr></table><hr>
-
-<font face="arial, helvetica" color="#1e029a" size="4"><b>Bochs 2.6.11 released on January 5, 2020 !</b></font><BR>
-New Bochs 2.6.11 release is now available. You can download it from the
-<a href="https://sourceforge.net/projects/bochs/files/bochs/2.6.11/">SourceForge project page</a>.<BR>
-See the <a href="https://svn.code.sf.net/p/bochs/code/tags/REL_2_6_11_FINAL/bochs/CHANGES">
-CHANGES</a> file for details on what has changed since release 2.6.10<BR>
-<hr>
 
 <BR><BR>
 <font face="arial, helvetica" color="#1e029a" size="4"><b>Bochs IRC Chat Transcripts</b></font><BR>
@@ -85,6 +78,7 @@ or <a href="https://sourceforge.net/sendmessage.php?touser=487634">Stanislav Shw
 <BR><BR>
 <font face="arial, helvetica" color="#1e029a" size="4"><b>Older News</b></font><BR>
 <ul>
+  <li><b>January 5, 2020:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.6.11/">Bochs 2.6.11</a> is now available.
   <li><b>December 1, 2019:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.6.10/">Bochs 2.6.10</a> is now available.
   <li><b>April 9, 2017:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.6.9/">Bochs 2.6.9</a> is now available.
   <li><b>May 3, 2015:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.6.8/">Bochs 2.6.8</a> is now available.
@@ -95,8 +89,7 @@ or <a href="https://sourceforge.net/sendmessage.php?touser=487634">Stanislav Shw
   <li><b>April 7, 2013:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.6.1/">Bochs 2.6.1</a> is now available.
   <li><b>September 2, 2012:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.6/">Bochs 2.6</a> is now available.
   <li><b>January 6, 2012:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.5.1/">Bochs 2.5.1</a> is now available.
-  <li><b>November 27, 2011:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.5/">Bochs 2.5</a> is now available.
-  <li><b>February 23, 2011:</b> Bochs project moved to Subversion source control. Bochs 2.4.6 is the last release available from CVS !
+  <li><b>November 27, 2011:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.5/">Bochs 2.5</a> is now available (first release from SVN).
 </ul>
 <BR><BR>
 <a href="news.html"><i>More News...</i></a>
