--- a/sfsite/news.html
+++ b/sfsite/news.html
@@ -8,6 +8,7 @@
  <BR><font face="arial, helvetica" color="#1e029a" size="4"><b>Bochs News</b></font><BR>
 
   <UL>
+  <li><b>January 5, 2020:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.6.11/">Bochs 2.6.11</a> is now available.
   <li><b>December 1, 2019:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.6.10/">Bochs 2.6.10</a> is now available.
   <li><b>April 9, 2017:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.6.9/">Bochs 2.6.9</a> is now available.
   <li><b>May 3, 2015:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.6.7/">Bochs 2.6.8</a> is now available.
@@ -18,8 +19,8 @@
   <li><b>April 7, 2013:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.6.1/">Bochs 2.6.1</a> is now available.
   <li><b>September 2, 2012:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.6/">Bochs 2.6</a> is now available.
   <li><b>January 6, 2012:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.5.1/">Bochs 2.5.1</a> is now available.
-  <li><b>November 27, 2011:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.5/">Bochs 2.5</a> is now available.
-  <li><b>February 23, 2011:</b> Bochs project moved to Subversion source control. Bochs 2.4.6 is the last release available from CVS !
+  <li><b>November 27, 2011:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.5/">Bochs 2.5</a> is now available (first release from SVN).
+  <li><b>February 23, 2011:</b> Bochs project moved to Subversion (SVN) source control.
   <li><b>February 22, 2011:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.4.6/">Bochs 2.4.6</a> is now available.
   <li><b>April, 2010:</b> After long time Bochs is back to top 25 of SourceForce projects !
   <li><b>April 25, 2010:</b> <a href="https://sourceforge.net/projects/bochs/files/bochs/2.4.5/">Bochs 2.4.5</a> is now available.
