--- a/trunk/sfsite/getcurrent.html
+++ b/trunk/sfsite/getcurrent.html
@@ -7,7 +7,47 @@
  <!--content starts here-->
  <img src="images/logo.png" alt="A Window, Tux, and the BSD Daemon" width="160" height="175" align="right">
 
- <BR><font face="arial, helvetica" color="#1e029a" size="4"><b>Latest release:</b> Bochs 2.6.11</font><BR><BR>
+ <BR><font face="arial, helvetica" color="#1e029a" size="4"><b>Latest release:</b> Bochs 2.7</font><BR><BR>
+
+Bochs 2.7 is the latest major release. Here is the brief summary of changes :
+
+<ul>
+<li>Bugfixes for CPU emulation correctness (CPUID/VMX/SVM fixes to support Windows Hyper-V as guest in Bochs)
+<li>Improvements for the plugin handling to simplify Bochs extensions
+<li>Added "multiple NICs" support to the NE2000 and E1000 devices
+<li>Added experimental FTP service for networking modules 'vnet' and 'socket'
+<li>Fixes and improvements for all supported Voodoo graphics adapters
+<li>Added USB keyboard emulation with most of the keys supported
+<li>GUI "cmdmode": create a headerbar event with key combo starting with F7
+<li>LGPL'd VGABIOS updated to version 0.8a (new VGABIOS for Voodoo Banshee)
+</ul>
+
+The binary packages for Linux and Windows are built with these features :
+<ul>
+<li> x86-64 emulation with all optimizations enabled
+<li> devices:
+ <ul>
+ <li> chipset: PCI (i430FX / i440FX / i440BX), ACPI
+ <li> video: Bochs VBE, Cirrus SVGA and 4 Voodoo models
+ <li> sound: SB16 (ISA) and ES1370 (PCI)
+ <li> network: NE2000 (ISA/PCI) and E1000 (PCI)
+ <li> USB: OHCI, UHCI, EHCI, xHCI and 8 pluggable device types
+ <li> other: game port, bus mouse
+ </ul>
+<li> Display libraries:
+ <ul>
+ <li> Linux: nogui, rfb, sdl2, term, vncsrv, wx, x
+ <li> Windows: nogui, rfb, win32
+ </ul>
+</ul>
+
+<a href="https://svn.code.sf.net/p/bochs/code/tags/REL_2_6_11_FINAL/bochs/CHANGES">
+Details on what has changed since version 2.6.10
+</a>
+
+<BR/><BR/>
+
+ <BR><font face="arial, helvetica" color="#1e029a" size="4"><b>Previous release:</b> Bochs 2.6.10</font><BR><BR>
 
 Bochs 2.6.11 is a bugfix release. Here is the summary of changes :
 
@@ -38,62 +78,20 @@ Bochs 2.6.11 is a bugfix release. Here is the summary of changes :
  </ul>
 </ul>
 
-The binary packages for Linux and Windows are built with these features :
-<ul>
-<li> x86-64 emulation with all optimizations enabled
-<li> devices:
- <ul>
- <li> chipset: PCI (i430FX / i440FX / i440BX), ACPI
- <li> video: Bochs VBE, Cirrus SVGA and 4 Voodoo models
- <li> sound: SB16 (ISA) and ES1370 (PCI)
- <li> network: NE2000 (ISA/PCI) and E1000 (PCI)
- <li> USB: OHCI, UHCI, EHCI, xHCI and 8 pluggable device types
- <li> other: game port, bus mouse
- </ul>
-<li> Display libraries:
- <ul>
- <li> Linux: nogui, rfb, sdl2, term, vncsrv, wx, x
- <li> Windows: nogui, rfb, win32
- </ul>
-</ul>
+<BR>
 
 <a href="https://svn.code.sf.net/p/bochs/code/tags/REL_2_6_11_FINAL/bochs/CHANGES">
 Details on what has changed since version 2.6.10
-</a>
-
-<BR/><BR/>
-
- <BR><font face="arial, helvetica" color="#1e029a" size="4"><b>Previous release:</b> Bochs 2.6.10</font><BR><BR>
-
-Bochs 2.6.10 is an intermediate (bugfix+) release. Here is the summary of changes :
-
-<ul>
-<li>CPU: Bugfixes for CPU emulation correctness (critical bugfixes for PCID, ADCX/ADOX, MOVBE, AVX/AVX-512 and VMX emulation)
-<li>CPU: implemented AVX-512 VBMI2/VNNI/BITALG, VAES, VPCLMULQDQ / GFNI instructions emulation
-<li>VMX: Implement EPT-Based Sub-Page Protection
-<li>CPUID: Added new CPU models Skylake-X, Cannonlake and Icelake-U
-<li>CPUID: Implemented side-channel attack prevention reporting and corresponding MSR registers, enabled for Icelake-U
-<li>Added basic support for the i440BX PCI/AGP chipset
-<li>Added basic Voodoo Banshee / Voodoo3 emulation support
-<li>Added basic DDC support for the VGA-compatible adapters
-<li>Implemented HPET emulation (ported from Qemu)
-</ul>
-
-<BR>
-
-<a href="https://svn.code.sf.net/p/bochs/code/tags/REL_2_6_10_FINAL/bochs/CHANGES">
-Details on what has changed since version 2.6.9
 </a>
 
  <BR><BR>
  <BR><font face="arial, helvetica" color="#1e029a" size="4"><b>Bochs Binary and Source Releases</b></font><BR><BR>
 The latest release of Bochs is available in these file formats :<BR>
 <ul>
-<li> Win32 + Win64 binary NSIS installer package (EXE)
-<li> Win32 binary with P4 CPU + SMP support (ZIP) - Bochs installation is required
+<li> Win64 binary NSIS installer package (EXE)
 <li> Linux binary RPM (64 bit)
 <li> Platform independant source package (TAR.GZ)
-<li> Win32 specific source package prepared for MSVC (ZIP)
+<li> Win32 specific source package prepared for VS2019 (ZIP)
 <li> Linux source RPM
 </ul>
 You can download any release since March 2001 on the 
